// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders components/conversations/demo/basic.tsx correctly 1`] = `
<div
  class="ant-card ant-card-bordered ant-card-small css-var-R0"
  style="width:320px"
>
  <div
    class="ant-card-body"
  >
    <ul
      class="ant-conversations css-var-R0"
    >
      <li
        class="ant-conversations-item ant-conversations-item-active"
      >
        <div
          class="ant-conversations-icon"
        >
          <span
            aria-label="github"
            class="anticon anticon-github"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="github"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M511.6 76.3C264.3 76.2 64 276.4 64 523.5 64 718.9 189.3 885 363.8 946c23.5 5.9 19.9-10.8 19.9-22.2v-77.5c-135.7 15.9-141.2-73.9-150.3-88.9C215 726 171.5 718 184.5 703c30.9-15.9 62.4 4 98.9 57.9 26.4 39.1 77.9 32.5 104 26 5.7-23.5 17.9-44.5 34.7-60.8-140.6-25.2-199.2-111-199.2-213 0-49.5 16.3-95 48.3-131.7-20.4-60.5 1.9-112.3 4.9-120 58.1-5.2 118.5 41.6 123.2 45.3 33-8.9 70.7-13.6 112.9-13.6 42.4 0 80.2 4.9 113.5 13.9 11.3-8.6 67.3-48.8 121.3-43.9 2.9 7.7 24.7 58.3 5.5 118 32.4 36.8 48.9 82.7 48.9 132.3 0 102.2-59 188.1-200 212.9a127.5 127.5 0 0138.1 91v112.5c.8 9 0 17.9 15 17.9 177.1-59.7 304.6-227 304.6-424.1 0-247.2-200.4-447.3-447.5-447.3z"
              />
            </svg>
          </span>
        </div>
        <span
          class="ant-typography ant-typography-ellipsis ant-typography-ellipsis-single-line ant-conversations-label css-var-R0"
        >
          What is Ant Design X?
        </span>
      </li>
      <li
        class="ant-conversations-item"
      >
        <div
          class="ant-conversations-icon"
        >
          <span
            aria-label="alipay-circle"
            class="anticon anticon-alipay-circle"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="alipay-circle"
              fill="currentColor"
              fill-rule="evenodd"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M512 64c247.42 0 448 200.58 448 448S759.42 960 512 960 64 759.42 64 512 264.58 64 512 64m32.5 168c-69.67 0-86.06 16.84-86.72 39.08l-.02 1.43v46.62H291.45c-9.92 0-14.28 23.05-14.27 39.3 0 2.7 2.08 4.93 4.77 4.93h175.81v58.3h-116.5c-9.96 0-14.3 23.76-14.27 39.47a4.77 4.77 0 004.77 4.76h233.45c-4.53 41.06-15.43 77.59-30.72 109.32l-1.22 2.5-.32-.28c-60.24-28.47-120.43-52.57-194.4-52.57l-2.62.01c-84.98 1.11-144.71 56.5-145.91 127.04l-.02 1.22.02 2.13c1.24 70.4 63.56 126.45 148.52 126.45 61.25 0 116.38-16.85 163.46-45.02a138.58 138.58 0 0014.07-7.96 345.6 345.6 0 0050.3-41.16l9.45 6.35 12.46 8.32c57.53 38.26 113.76 72.62 169.86 79.27a142.62 142.62 0 0018.31 1.16c43.02 0 55-52.68 57.39-95.51l.14-2.84c.4-8.46-6.2-15.6-14.65-15.86-75.46-2.37-136.45-22.05-192-46.11l-6.27-2.75c35.15-56.8 56.66-121.81 57.15-186.66l.09-1.08c.4-5.51-4-10.2-9.52-10.2H549.33v-58.3h165.73c9.92 0 14.28-22.12 14.27-39.31a4.85 4.85 0 00-4.78-4.92H549.32v-82.35a4.8 4.8 0 00-4.83-4.78M328 583.85c54.63 0 107.08 22.41 158.1 52.19l5.76 3.4c-103.57 119.84-247.17 95.9-261.72 26.37a66.89 66.89 0 01-1.14-9.83l-.06-2.34.02-.9c.97-40.12 45.33-68.9 99.04-68.9"
              />
            </svg>
          </span>
        </div>
        <span
          class="ant-typography ant-typography-ellipsis ant-typography-ellipsis-single-line ant-conversations-label css-var-R0"
        >
          <div>
            Getting Started:
            <!-- -->
            <a
              href="https://ant-design.antgroup.com/index-cn"
              rel="noreferrer"
              target="_blank"
            >
              Ant Design !
            </a>
          </div>
        </span>
      </li>
      <li
        class="ant-conversations-item"
      >
        <div
          class="ant-conversations-icon"
        >
          <span
            aria-label="docker"
            class="anticon anticon-docker"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="docker"
              fill="currentColor"
              fill-rule="evenodd"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M555.88 488.24h-92.62v-82.79h92.62zm0-286.24h-92.62v85.59h92.62zm109.45 203.45H572.7v82.79h92.62zm-218.9-101.02h-92.61v84.18h92.6zm109.45 0h-92.61v84.18h92.6zm388.69 140.3c-19.65-14.02-67.36-18.23-102.44-11.22-4.2-33.67-23.85-63.14-57.53-89.8l-19.65-12.62-12.62 19.64c-25.26 39.29-32.28 103.83-5.62 145.92-12.63 7.02-36.48 15.44-67.35 15.44H67.56c-12.63 71.56 8.42 164.16 61.74 227.3C181.22 801.13 259.8 832 360.83 832c220.3 0 384.48-101.02 460.25-286.24 29.47 0 95.42 0 127.7-63.14 1.4-2.8 9.82-18.24 11.22-23.85zm-717.04-39.28h-92.61v82.79h92.6zm109.45 0h-92.61v82.79h92.6zm109.45 0h-92.61v82.79h92.6zM336.98 304.43h-92.61v84.19h92.6z"
              />
            </svg>
          </span>
        </div>
        <span
          class="ant-typography ant-typography-ellipsis ant-typography-ellipsis-single-line ant-conversations-label css-var-R0"
        >
          In Docker, use 🐑 Ollama and initialize
        </span>
      </li>
      <li
        class="ant-conversations-item ant-conversations-item-disabled"
      >
        <span
          class="ant-typography ant-typography-ellipsis ant-typography-ellipsis-single-line ant-conversations-label css-var-R0"
        >
          Expired, please go to the recycle bin to check
        </span>
      </li>
    </ul>
  </div>
</div>
`;

exports[`renders components/conversations/demo/controlled-mode.tsx correctly 1`] = `
<div
  class="ant-flex css-var-R0 ant-flex-align-flex-start ant-flex-gap-small ant-flex-vertical"
>
  <div
    class="ant-card ant-card-bordered ant-card-small css-var-R0"
    style="width:320px"
  >
    <div
      class="ant-card-body"
    >
      <ul
        class="ant-conversations css-var-R0"
      >
        <li
          class="ant-conversations-item ant-conversations-item-active"
        >
          <span
            class="ant-typography ant-typography-ellipsis ant-typography-ellipsis-single-line ant-conversations-label css-var-R0"
          >
            Conversation Item 1
          </span>
        </li>
        <li
          class="ant-conversations-item"
        >
          <span
            class="ant-typography ant-typography-ellipsis ant-typography-ellipsis-single-line ant-conversations-label css-var-R0"
          >
            Conversation Item 2
          </span>
        </li>
        <li
          class="ant-conversations-item"
        >
          <span
            class="ant-typography ant-typography-ellipsis ant-typography-ellipsis-single-line ant-conversations-label css-var-R0"
          >
            Conversation Item 3
          </span>
        </li>
      </ul>
    </div>
  </div>
  <div
    class="ant-flex css-var-R0 ant-flex-gap-small"
  >
    <button
      class="ant-btn css-var-R0 ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
      type="button"
    >
      <span>
        Active First
      </span>
    </button>
    <button
      class="ant-btn css-var-R0 ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
      type="button"
    >
      <span>
        Active Last
      </span>
    </button>
  </div>
</div>
`;

exports[`renders components/conversations/demo/group.tsx correctly 1`] = `
<div
  class="ant-card ant-card-bordered ant-card-small css-var-R0"
  style="width:320px"
>
  <div
    class="ant-card-body"
  >
    <ul
      class="ant-conversations css-var-R0"
    >
      <li>
        <div
          class="ant-divider css-var-R0 ant-divider-horizontal ant-divider-with-text ant-divider-with-text-left ant-divider-plain"
          role="separator"
        >
          <span
            class="ant-divider-inner-text"
          >
            <span
              class="ant-typography ant-typography-secondary css-var-R0"
            >
              Group1
            </span>
          </span>
        </div>
        <ul
          class="ant-conversations-list"
        >
          <li
            class="ant-conversations-item ant-conversations-item-active"
          >
            <div
              class="ant-conversations-icon"
            >
              <span
                aria-label="github"
                class="anticon anticon-github"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="github"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M511.6 76.3C264.3 76.2 64 276.4 64 523.5 64 718.9 189.3 885 363.8 946c23.5 5.9 19.9-10.8 19.9-22.2v-77.5c-135.7 15.9-141.2-73.9-150.3-88.9C215 726 171.5 718 184.5 703c30.9-15.9 62.4 4 98.9 57.9 26.4 39.1 77.9 32.5 104 26 5.7-23.5 17.9-44.5 34.7-60.8-140.6-25.2-199.2-111-199.2-213 0-49.5 16.3-95 48.3-131.7-20.4-60.5 1.9-112.3 4.9-120 58.1-5.2 118.5 41.6 123.2 45.3 33-8.9 70.7-13.6 112.9-13.6 42.4 0 80.2 4.9 113.5 13.9 11.3-8.6 67.3-48.8 121.3-43.9 2.9 7.7 24.7 58.3 5.5 118 32.4 36.8 48.9 82.7 48.9 132.3 0 102.2-59 188.1-200 212.9a127.5 127.5 0 0138.1 91v112.5c.8 9 0 17.9 15 17.9 177.1-59.7 304.6-227 304.6-424.1 0-247.2-200.4-447.3-447.5-447.3z"
                  />
                </svg>
              </span>
            </div>
            <span
              class="ant-typography ant-typography-ellipsis ant-typography-ellipsis-single-line ant-conversations-label css-var-R0"
            >
              What is Ant Design X ?
            </span>
          </li>
          <li
            class="ant-conversations-item"
          >
            <div
              class="ant-conversations-icon"
            >
              <span
                aria-label="alipay-circle"
                class="anticon anticon-alipay-circle"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="alipay-circle"
                  fill="currentColor"
                  fill-rule="evenodd"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M512 64c247.42 0 448 200.58 448 448S759.42 960 512 960 64 759.42 64 512 264.58 64 512 64m32.5 168c-69.67 0-86.06 16.84-86.72 39.08l-.02 1.43v46.62H291.45c-9.92 0-14.28 23.05-14.27 39.3 0 2.7 2.08 4.93 4.77 4.93h175.81v58.3h-116.5c-9.96 0-14.3 23.76-14.27 39.47a4.77 4.77 0 004.77 4.76h233.45c-4.53 41.06-15.43 77.59-30.72 109.32l-1.22 2.5-.32-.28c-60.24-28.47-120.43-52.57-194.4-52.57l-2.62.01c-84.98 1.11-144.71 56.5-145.91 127.04l-.02 1.22.02 2.13c1.24 70.4 63.56 126.45 148.52 126.45 61.25 0 116.38-16.85 163.46-45.02a138.58 138.58 0 0014.07-7.96 345.6 345.6 0 0050.3-41.16l9.45 6.35 12.46 8.32c57.53 38.26 113.76 72.62 169.86 79.27a142.62 142.62 0 0018.31 1.16c43.02 0 55-52.68 57.39-95.51l.14-2.84c.4-8.46-6.2-15.6-14.65-15.86-75.46-2.37-136.45-22.05-192-46.11l-6.27-2.75c35.15-56.8 56.66-121.81 57.15-186.66l.09-1.08c.4-5.51-4-10.2-9.52-10.2H549.33v-58.3h165.73c9.92 0 14.28-22.12 14.27-39.31a4.85 4.85 0 00-4.78-4.92H549.32v-82.35a4.8 4.8 0 00-4.83-4.78M328 583.85c54.63 0 107.08 22.41 158.1 52.19l5.76 3.4c-103.57 119.84-247.17 95.9-261.72 26.37a66.89 66.89 0 01-1.14-9.83l-.06-2.34.02-.9c.97-40.12 45.33-68.9 99.04-68.9"
                  />
                </svg>
              </span>
            </div>
            <span
              class="ant-typography ant-typography-ellipsis ant-typography-ellipsis-single-line ant-conversations-label css-var-R0"
            >
              <div>
                Getting Started:
                <!-- -->
                <a
                  href="https://ant-design.antgroup.com/index-cn"
                  rel="noreferrer"
                  target="_blank"
                >
                  Ant Design !
                </a>
              </div>
            </span>
          </li>
        </ul>
      </li>
      <li>
        <div
          class="ant-divider css-var-R0 ant-divider-horizontal ant-divider-with-text ant-divider-with-text-left ant-divider-plain"
          role="separator"
        >
          <span
            class="ant-divider-inner-text"
          >
            <span
              class="ant-typography ant-typography-secondary css-var-R0"
            >
              Group2
            </span>
          </span>
        </div>
        <ul
          class="ant-conversations-list"
        >
          <li
            class="ant-conversations-item"
          >
            <div
              class="ant-conversations-icon"
            >
              <span
                aria-label="docker"
                class="anticon anticon-docker"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="docker"
                  fill="currentColor"
                  fill-rule="evenodd"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M555.88 488.24h-92.62v-82.79h92.62zm0-286.24h-92.62v85.59h92.62zm109.45 203.45H572.7v82.79h92.62zm-218.9-101.02h-92.61v84.18h92.6zm109.45 0h-92.61v84.18h92.6zm388.69 140.3c-19.65-14.02-67.36-18.23-102.44-11.22-4.2-33.67-23.85-63.14-57.53-89.8l-19.65-12.62-12.62 19.64c-25.26 39.29-32.28 103.83-5.62 145.92-12.63 7.02-36.48 15.44-67.35 15.44H67.56c-12.63 71.56 8.42 164.16 61.74 227.3C181.22 801.13 259.8 832 360.83 832c220.3 0 384.48-101.02 460.25-286.24 29.47 0 95.42 0 127.7-63.14 1.4-2.8 9.82-18.24 11.22-23.85zm-717.04-39.28h-92.61v82.79h92.6zm109.45 0h-92.61v82.79h92.6zm109.45 0h-92.61v82.79h92.6zM336.98 304.43h-92.61v84.19h92.6z"
                  />
                </svg>
              </span>
            </div>
            <span
              class="ant-typography ant-typography-ellipsis ant-typography-ellipsis-single-line ant-conversations-label css-var-R0"
            >
              In Docker, use 🐑 Ollama and initialize
            </span>
          </li>
          <li
            class="ant-conversations-item"
          >
            <span
              class="ant-typography ant-typography-ellipsis ant-typography-ellipsis-single-line ant-conversations-label css-var-R0"
            >
              Expired, please go to the recycle bin to check
            </span>
          </li>
        </ul>
      </li>
    </ul>
  </div>
</div>
`;

exports[`renders components/conversations/demo/group-sort.tsx correctly 1`] = `
<div
  class="ant-card ant-card-bordered ant-card-small css-var-R0"
  style="width:320px"
>
  <div
    class="ant-card-body"
  >
    <ul
      class="ant-conversations css-var-R0"
    >
      <li>
        <div
          class="ant-divider css-var-R0 ant-divider-horizontal ant-divider-with-text ant-divider-with-text-left ant-divider-plain"
          role="separator"
        >
          <span
            class="ant-divider-inner-text"
          >
            <span
              class="ant-typography ant-typography-secondary css-var-R0"
            >
              <div
                class="ant-space ant-space-horizontal ant-space-align-center ant-space-gap-row-small ant-space-gap-col-small css-var-R0"
              >
                <div
                  class="ant-space-item"
                >
                  🔥
                </div>
                <div
                  class="ant-space-item"
                >
                  Pinned
                </div>
              </div>
            </span>
          </span>
        </div>
        <ul
          class="ant-conversations-list"
        >
          <li
            class="ant-conversations-item ant-conversations-item-active"
          >
            <div
              class="ant-conversations-icon"
            >
              <span
                aria-label="github"
                class="anticon anticon-github"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="github"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M511.6 76.3C264.3 76.2 64 276.4 64 523.5 64 718.9 189.3 885 363.8 946c23.5 5.9 19.9-10.8 19.9-22.2v-77.5c-135.7 15.9-141.2-73.9-150.3-88.9C215 726 171.5 718 184.5 703c30.9-15.9 62.4 4 98.9 57.9 26.4 39.1 77.9 32.5 104 26 5.7-23.5 17.9-44.5 34.7-60.8-140.6-25.2-199.2-111-199.2-213 0-49.5 16.3-95 48.3-131.7-20.4-60.5 1.9-112.3 4.9-120 58.1-5.2 118.5 41.6 123.2 45.3 33-8.9 70.7-13.6 112.9-13.6 42.4 0 80.2 4.9 113.5 13.9 11.3-8.6 67.3-48.8 121.3-43.9 2.9 7.7 24.7 58.3 5.5 118 32.4 36.8 48.9 82.7 48.9 132.3 0 102.2-59 188.1-200 212.9a127.5 127.5 0 0138.1 91v112.5c.8 9 0 17.9 15 17.9 177.1-59.7 304.6-227 304.6-424.1 0-247.2-200.4-447.3-447.5-447.3z"
                  />
                </svg>
              </span>
            </div>
            <span
              class="ant-typography ant-typography-ellipsis ant-typography-ellipsis-single-line ant-conversations-label css-var-R0"
            >
              What is Ant Design X ?
            </span>
          </li>
          <li
            class="ant-conversations-item"
          >
            <div
              class="ant-conversations-icon"
            >
              <span
                aria-label="alipay-circle"
                class="anticon anticon-alipay-circle"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="alipay-circle"
                  fill="currentColor"
                  fill-rule="evenodd"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M512 64c247.42 0 448 200.58 448 448S759.42 960 512 960 64 759.42 64 512 264.58 64 512 64m32.5 168c-69.67 0-86.06 16.84-86.72 39.08l-.02 1.43v46.62H291.45c-9.92 0-14.28 23.05-14.27 39.3 0 2.7 2.08 4.93 4.77 4.93h175.81v58.3h-116.5c-9.96 0-14.3 23.76-14.27 39.47a4.77 4.77 0 004.77 4.76h233.45c-4.53 41.06-15.43 77.59-30.72 109.32l-1.22 2.5-.32-.28c-60.24-28.47-120.43-52.57-194.4-52.57l-2.62.01c-84.98 1.11-144.71 56.5-145.91 127.04l-.02 1.22.02 2.13c1.24 70.4 63.56 126.45 148.52 126.45 61.25 0 116.38-16.85 163.46-45.02a138.58 138.58 0 0014.07-7.96 345.6 345.6 0 0050.3-41.16l9.45 6.35 12.46 8.32c57.53 38.26 113.76 72.62 169.86 79.27a142.62 142.62 0 0018.31 1.16c43.02 0 55-52.68 57.39-95.51l.14-2.84c.4-8.46-6.2-15.6-14.65-15.86-75.46-2.37-136.45-22.05-192-46.11l-6.27-2.75c35.15-56.8 56.66-121.81 57.15-186.66l.09-1.08c.4-5.51-4-10.2-9.52-10.2H549.33v-58.3h165.73c9.92 0 14.28-22.12 14.27-39.31a4.85 4.85 0 00-4.78-4.92H549.32v-82.35a4.8 4.8 0 00-4.83-4.78M328 583.85c54.63 0 107.08 22.41 158.1 52.19l5.76 3.4c-103.57 119.84-247.17 95.9-261.72 26.37a66.89 66.89 0 01-1.14-9.83l-.06-2.34.02-.9c.97-40.12 45.33-68.9 99.04-68.9"
                  />
                </svg>
              </span>
            </div>
            <span
              class="ant-typography ant-typography-ellipsis ant-typography-ellipsis-single-line ant-conversations-label css-var-R0"
            >
              <div>
                Getting Started:
                <!-- -->
                <a
                  href="https://ant-design.antgroup.com/index-cn"
                  rel="noreferrer"
                  target="_blank"
                >
                  Ant Design !
                </a>
              </div>
            </span>
          </li>
        </ul>
      </li>
      <li>
        <div
          class="ant-divider css-var-R0 ant-divider-horizontal ant-divider-plain"
          role="separator"
        />
        <ul
          class="ant-conversations-list"
        >
          <li
            class="ant-conversations-item"
          >
            <div
              class="ant-conversations-icon"
            >
              <span
                aria-label="docker"
                class="anticon anticon-docker"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="docker"
                  fill="currentColor"
                  fill-rule="evenodd"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M555.88 488.24h-92.62v-82.79h92.62zm0-286.24h-92.62v85.59h92.62zm109.45 203.45H572.7v82.79h92.62zm-218.9-101.02h-92.61v84.18h92.6zm109.45 0h-92.61v84.18h92.6zm388.69 140.3c-19.65-14.02-67.36-18.23-102.44-11.22-4.2-33.67-23.85-63.14-57.53-89.8l-19.65-12.62-12.62 19.64c-25.26 39.29-32.28 103.83-5.62 145.92-12.63 7.02-36.48 15.44-67.35 15.44H67.56c-12.63 71.56 8.42 164.16 61.74 227.3C181.22 801.13 259.8 832 360.83 832c220.3 0 384.48-101.02 460.25-286.24 29.47 0 95.42 0 127.7-63.14 1.4-2.8 9.82-18.24 11.22-23.85zm-717.04-39.28h-92.61v82.79h92.6zm109.45 0h-92.61v82.79h92.6zm109.45 0h-92.61v82.79h92.6zM336.98 304.43h-92.61v84.19h92.6z"
                  />
                </svg>
              </span>
            </div>
            <span
              class="ant-typography ant-typography-ellipsis ant-typography-ellipsis-single-line ant-conversations-label css-var-R0"
            >
              In Docker, use 🐑 Ollama and initialize
            </span>
          </li>
        </ul>
      </li>
      <li>
        <div
          class="ant-divider css-var-R0 ant-divider-horizontal ant-divider-with-text ant-divider-with-text-left ant-divider-plain"
          role="separator"
        >
          <span
            class="ant-divider-inner-text"
          >
            <span
              class="ant-typography ant-typography-secondary css-var-R0"
            >
              <div
                class="ant-space ant-space-horizontal ant-space-align-center ant-space-gap-row-small ant-space-gap-col-small css-var-R0"
              >
                <div
                  class="ant-space-item"
                >
                  🔥
                </div>
                <div
                  class="ant-space-item"
                >
                  Expired
                </div>
              </div>
            </span>
          </span>
        </div>
        <ul
          class="ant-conversations-list"
        >
          <li
            class="ant-conversations-item ant-conversations-item-disabled"
          >
            <span
              class="ant-typography ant-typography-ellipsis ant-typography-ellipsis-single-line ant-conversations-label css-var-R0"
            >
              Expired, please go to the recycle bin to check
            </span>
          </li>
        </ul>
      </li>
    </ul>
  </div>
</div>
`;

exports[`renders components/conversations/demo/infinite-load.tsx correctly 1`] = `
<div
  class="ant-card ant-card-bordered ant-card-small css-var-R0"
  id="scrollableDiv"
  style="height:600px;width:320px;overflow:auto"
>
  <div
    class="ant-card-body"
  >
    <div
      class="infinite-scroll-component__outerdiv"
    >
      <div
        class="infinite-scroll-component "
        style="height:auto;overflow:auto;-webkit-overflow-scrolling:touch;width:270px"
      >
        <ul
          class="ant-conversations css-var-R0"
        />
        <div
          style="text-align:center"
        >
          <div
            aria-busy="true"
            aria-live="polite"
            class="ant-spin ant-spin-sm ant-spin-spinning css-var-R0"
          >
            <span
              aria-label="redo"
              class="anticon anticon-redo anticon-spin ant-spin-dot"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="redo"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M758.2 839.1C851.8 765.9 912 651.9 912 523.9 912 303 733.5 124.3 512.6 124 291.4 123.7 112 302.8 112 523.9c0 125.2 57.5 236.9 147.6 310.2 3.5 2.8 8.6 2.2 11.4-1.3l39.4-50.5c2.7-3.4 2.1-8.3-1.2-11.1-8.1-6.6-15.9-13.7-23.4-21.2a318.64 318.64 0 01-68.6-101.7C200.4 609 192 567.1 192 523.9s8.4-85.1 25.1-124.5c16.1-38.1 39.2-72.3 68.6-101.7 29.4-29.4 63.6-52.5 101.7-68.6C426.9 212.4 468.8 204 512 204s85.1 8.4 124.5 25.1c38.1 16.1 72.3 39.2 101.7 68.6 29.4 29.4 52.5 63.6 68.6 101.7 16.7 39.4 25.1 81.3 25.1 124.5s-8.4 85.1-25.1 124.5a318.64 318.64 0 01-68.6 101.7c-9.3 9.3-19.1 18-29.3 26L668.2 724a8 8 0 00-14.1 3l-39.6 162.2c-1.2 5 2.6 9.9 7.7 9.9l167 .8c6.7 0 10.5-7.7 6.3-12.9l-37.3-47.9z"
                />
              </svg>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders components/conversations/demo/with-menu.tsx correctly 1`] = `
<div
  class="ant-app css-var-R0"
>
  <div
    class="ant-card ant-card-bordered ant-card-small css-var-R0"
    style="width:320px"
  >
    <div
      class="ant-card-body"
    >
      <ul
        class="ant-conversations css-var-R0"
      >
        <li
          class="ant-conversations-item"
        >
          <span
            class="ant-typography ant-typography-ellipsis ant-typography-ellipsis-single-line ant-conversations-label css-var-R0"
          >
            Conversation Item 1
          </span>
          <span
            aria-label="more"
            class="anticon anticon-more ant-dropdown-trigger ant-conversations-menu-icon"
            role="img"
            tabindex="-1"
          >
            <svg
              aria-hidden="true"
              data-icon="more"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M456 231a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0z"
              />
            </svg>
          </span>
        </li>
        <li
          class="ant-conversations-item"
        >
          <span
            class="ant-typography ant-typography-ellipsis ant-typography-ellipsis-single-line ant-conversations-label css-var-R0"
          >
            Conversation Item 2
          </span>
          <span
            aria-label="more"
            class="anticon anticon-more ant-dropdown-trigger ant-conversations-menu-icon"
            role="img"
            tabindex="-1"
          >
            <svg
              aria-hidden="true"
              data-icon="more"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M456 231a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0z"
              />
            </svg>
          </span>
        </li>
        <li
          class="ant-conversations-item"
        >
          <span
            class="ant-typography ant-typography-ellipsis ant-typography-ellipsis-single-line ant-conversations-label css-var-R0"
          >
            Conversation Item 3
          </span>
          <span
            aria-label="more"
            class="anticon anticon-more ant-dropdown-trigger ant-conversations-menu-icon"
            role="img"
            tabindex="-1"
          >
            <svg
              aria-hidden="true"
              data-icon="more"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M456 231a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0z"
              />
            </svg>
          </span>
        </li>
        <li
          class="ant-conversations-item ant-conversations-item-disabled"
        >
          <span
            class="ant-typography ant-typography-ellipsis ant-typography-ellipsis-single-line ant-conversations-label css-var-R0"
          >
            Conversation Item 4
          </span>
        </li>
      </ul>
    </div>
  </div>
</div>
`;
